--- a/assets/ques.html
+++ b/assets/ques.html
@@ -23,7 +23,7 @@
             <h1 class="text-4xl"><span class="text-gray-500">Dev</span><span class="font-bold">Board</span></h1>
         </div>
         <div class="flex gap-11 items-center">
-            <button class="btn btn-primary">Back to desk</button>
+            <button  class="btn btn-primary"id="back-btn">Back to desk</button>
         </div>
     </nav>
 <!-- faq -->
@@ -94,5 +94,9 @@
           </div>
        </div>
 </section>
+
+<script src="board.js"></script>
+<script src="back.js"></script>
+
 </body>
 </html>
